k8s/client-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: client
  labels:
    app: client
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: client
        imagePullPolicy: IfNotPresent 
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: ClusterIP
  selector: 
    app: client
  ports:
    - port: 3000
      targetPort: 3000
