k8s/event-bus-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: event-bus
  labels:
    app: event-bus
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
      - name: event-bus
        image: event-bus
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
    - port: 4005
      targetPort: 4005
