k8s/moderation-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: moderation
  labels:
    app: moderation
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
      - name: moderation
        image: moderation
        imagePullPolicy: IfNotPresent 
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - port: 4003
      targetPort: 4003
