k8s/query-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: query
  labels:
    app: query
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: query
        imagePullPolicy: IfNotPresent 
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
    - port: 4002
      targetPort: 4002
